2009-04-15  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* test_struct.m: Add tests for lazy copying in nested assignments
	of struct elements.

2009-04-12  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* test_contin.m, test_error.m, test_eval-catch.m, test_for.m,
        test_global.m,  test_if.m, test_index-wfi-f.m,
        /test_index-wfi-t.m, test_io.m, test_logical-wfi-f.m,
        test_logical-wfi-t.m, test_prefer.m, test_recursion.m,
        test_return.m, test_string.m, test_struct.m, test_switch.m,
        test_system.m, test_transpose.m, test_try.m, test_unwind.m,
        test_while.m: Remove obsolete comments.

2009-04-07  Carlo de Falco  <kingcrimson@tiscali.it>

	* test_io.m: Add a test for saving and reading a matrix with the
	"-ascii" format.

2009-03-10  Jason Riedy  <jason@acm.org>

	* test_diag_perm.m: Add tests for permuting sparse matrices and
	for the correct types from interactions between
	pseudo-scalars (1x1 matrices).

2009-03-10  Jason Riedy  <jason@acm.org>

	* build_sparse_tests.sh: Add LU tests to the rectangular tests.

2009-03-10  Jason Riedy  <jason@acm.org>

	* test_diag_perm.m: Add a test for conversion to sparse form.

2009-03-09  Jason Riedy  <jason@acm.org>

	* test_diag_perm.m: Add tests for diag + sparse.

2009-03-08  Jason Riedy  <jason@acm.org>

	* test_diag_perm.m: Add tests for inverse scaling and sparse structure.

2009-03-08  Jason Riedy  <jason@acm.org>

	* test_diag_perm.m: Add tests for preserving sparse structure when scaling.

2009-02-25  John W. Eaton  <jwe@octave.org>

	* build_sparse_tests.sh: Note that saving sparse matrices to MAT
	files fails when using 64-bit indexing.

2009-02-22  John W. Eaton  <jwe@octave.org>

	* build_sparse_tests.sh: Fix diag matrix divide by zero test.

2009-02-18  John W. Eaton  <jwe@octave.org>

	* test_args.m: Don't use assert to test for function handles.

2009-02-15  John W. Eaton  <jwe@octave.org>

	* test_io.m, test_prefer.m: Avoid command-style function call